[metadata]
name = Synrad-UC2000-TobyBi
version = 2021.03
author_email = toby.bi@outlook.com
url = https://github.com/TobyBi/Synrad-UC2000
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.8